Fix scrollbar appearance issue

--- a/purchaseRequests/static/purchaseRequests/css/detail.css
+++ b/purchaseRequests/static/purchaseRequests/css/detail.css
@@ -1,4 +1,8 @@
 
+body {
+    overflow: hidden;
+}
+
 main {
     text-align: center;
 }
